# sheaf-mpnn

./: README.md  pyproject.toml
docs/: conf.py
docs/api/: exp.rst  sheaf_mpnn.rst
docs/getting_started/: quickstart.md
src/exp/: cli.py  data.py  gen_splits.py  run.py  splits.py
src/exp/sweeps/: sweep.py
src/sheaf_mpnn/: base_conv.py
tests/exp/: test_cli.py
