[project]
name = "sheaf_mpnn"
version = "0.1.0"
description = "Sheaf Message Passing Neural Networks"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.13"
dependencies = [
    "torch==2.8.0",
    "torch-geometric",
    "lightning==2.6.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "tyro>=0.8.0",
    "optuna>=3.6.0",
]

[project.scripts]
sheaf = "exp.cli:main"

[tool.uv]
package = true
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'", "sys_platform == 'win32'"]

[tool.uv.sources]
# Direct Wheel Links for PyG Extensions
torch = [
    { index = "torch-cu128", marker = "sys_platform == 'win32'" }
]
[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
# Install with: uv sync --extra wandb
wandb = ["wandb>=0.17.0", "optuna-integration[wandb]>=0.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0", # Type checking is vital for GNN shapes
    "pytest-github-actions-annotate-failures>=0.2.0",
    "prek>=0.4.0",
    "ty>=0.0.37",
]

docs = [
    "sphinx>=7.4.0",
    "pydata-sphinx-theme>=0.16.0",
    "myst-parser>=3.0.0",
    "linkify-it-py>=2.0.3",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxext-opengraph>=0.9.1",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheaf_mpnn", "src/exp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "7.0"
addopts = "-ra -q --cov=src/sheaf_mpnn --cov-report=term-missing --ignore=tests/integration"
filterwarnings = [
    "ignore::DeprecationWarning:torch_geometric",
    "ignore::DeprecationWarning:lightning",
    "ignore::UserWarning:lightning",
    "ignore::UserWarning:torch_geometric",
]
testpaths = ["tests"]
markers = [
    "integration: end-to-end smoke tests (run with: pytest tests/integration/)",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
# Expanded selection for better code quality
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
    "B", # flake8-bugbear
    "D", # pydocstyle
    "UP", # pyupgrade (keeps code modern)
    "NPY", # numpy-specific rules
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D107",
    "D205", "D400", "D415", # Relaxing some docstring requirements
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["sheaf_mpnn", "exp"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "def __repr__",
]
